--- a/.github/workflows/prod.deploy.yml
+++ b/.github/workflows/prod.deploy.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Production deployment
 on:
   push:
     branches: [ "main" ]
@@ -17,7 +17,9 @@ jobs:
         cache: 'yarn'
     - run: yarn install
     - run: yarn build
-
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
     - name: Deploying
       uses: easingthemes/ssh-deploy@v4.0.5
       with:
