Adding deploy action by ssh

--- a/.github/workflows/prod.deploy.yml
+++ b/.github/workflows/prod.deploy.yml
@@ -19,6 +19,8 @@ jobs:
     - run: yarn build
   deploy:
     runs-on: ubuntu-latest
+    needs:
+      - build
     steps:
     - name: Deploying
       uses: easingthemes/ssh-deploy@v4.0.5
