--- a/.github/workflows/build.deploy.yml
+++ b/.github/workflows/build.deploy.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ "main" ]
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -17,11 +17,7 @@ jobs:
         cache: 'yarn'
     - run: yarn install
     - run: yarn build
-  deploy:
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    steps:
+
     - name: Deploying
       uses: easingthemes/ssh-deploy@v4.0.5
       with:
