--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "vue": "^3.2.45",
+    "vue-i18n": "9",
     "vuetify": "^3.1.5"
   },
   "devDependencies": {
+    "@intlify/unplugin-vue-i18n": "^0.8.2",
     "@mdi/font": "^7.1.96",
+    "@types/node": "^18.14.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.58.2",
     "typescript": "^4.9.3",
